# installer

./: .ai-fs-permissions.yaml  .gitignore  README.md  cspell.json  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.centy/: .centy-manifest.json  config.json
.centy/issues/: 1c5bb26f-adcd-4a61-92a5-b6dcf383814e.md  4e567375-8889-4b11-9265-fc6d944b8bae.md  58b2df28-5cb8-4073-a411-b18a6c87df8e.md  6d660007-c1d8-4825-af4c-efc5a29f9eb7.md  e3c05268-eee5-4851-b4f4-e2a77f79bdb1.md
.claude/: settings.json
.github/workflows/: e2e.yml  publish-npm.yml
.husky/: pre-commit  pre-push
e2e/: Dockerfile.linux  run-linux.sh
lib/: Cargo.toml  README.md
lib/src/: daemon.rs  download.rs  extract.rs  github.rs  install.rs  lib.rs  main.rs  platform.rs
lib/tests/: e2e_install.rs
scripts/: build-npm.js  publish-npm.js  set-version.js
shells/cargo/: README.md
shells/go/: README.md
shells/npm/: README.md
shells/npm/centy/: package.json
shells/npm/centy-darwin-arm64/: package.json
shells/npm/centy-darwin-x64/: package.json
shells/npm/centy-installer/: package.json
shells/npm/centy-installer-darwin-arm64/: package.json
shells/npm/centy-installer-darwin-x64/: package.json
shells/npm/centy-installer-linux-arm64/: package.json
shells/npm/centy-installer-linux-x64/: package.json
shells/npm/centy-installer-win32-x64/: package.json
shells/npm/centy-linux-arm64/: package.json
shells/npm/centy-linux-x64/: package.json
shells/npm/centy-win32-x64/: package.json
