[package]
name = "centy-installer"
version = "0.1.0"
edition = "2021"
description = "Multi-ecosystem installer for the centy-daemon binary"
license = "MIT"
repository = "https://github.com/centy-io/installer"
keywords = ["installer", "daemon", "cli"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = "2"
dirs = "6"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
# Allow pedantic lints that are too noisy for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Transitive dependency version duplication is outside our control
multiple_crate_versions = "allow"
