[package]
name = "centy-installer"
version = "0.1.0"
edition = "2021"
description = "Multi-ecosystem installer for the centy-daemon binary"
license = "MIT"
repository = "https://github.com/centy-io/installer"
keywords = ["installer", "daemon", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "centy-installer"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = "2"
dirs = "6"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
dirs = "6"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
# Forbid direct indexing/slicing (`a[i]`, `a[i..j]`) which panics out of bounds.
# Completes the no-panic family above by closing the remaining common panic
# source; prefer `.get(i)` / `.get(i..j)` so malformed input is handled, not fatal.
indexing_slicing = "deny"
# Require every `#[allow(...)]` to carry a `reason = "..."` explaining why the
# lint is suppressed. Suppressions silence the linter, so each one should be
# justified in-place; this keeps them auditable and prevents stale or
# copy-pasted allows from accumulating unexplained.
allow_attributes_without_reason = "deny"
# Forbid string slicing (`&s[i..j]`) which panics when a bound falls inside a
# UTF-8 multi-byte char. `indexing_slicing` covers arrays/slices/`Vec`, not `str`;
# this closes that remaining panic gap. Prefer `.get(i..j)` for fallible slicing.
string_slice = "deny"
# Reject leftover `dbg!` debugging macros so they never ship to production.
dbg_macro = "deny"
# Reject leftover `todo!()` placeholder macros, which panic at runtime if
# they ship accidentally. Closes the last common panic-causing macro not
# already covered by the no-panic lints above.
todo = "deny"
# Allow pedantic lints that are too noisy for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Transitive dependency version duplication is outside our control
multiple_crate_versions = "allow"
